--- a/configs/default_ViT_config.json
+++ b/configs/default_ViT_config.json
@@ -10,6 +10,8 @@
     },
     "models":{
         "model_name":"vit_base_r50_s16_224.orig_in21k",
+        "base_model":"default_base_model",
+        "mlp":"default_mlp",
         "num_classes":0,
         "pretrained":true,
         "in_chans":3
