--- a/configs/default_ViT_config.json
+++ b/configs/default_ViT_config.json
@@ -21,6 +21,7 @@
     },
     "datasets":[
         {
+            "input_column": ["image_path"],
             "train_transform":{
                 "RandomRotation":[-45,45],
                 "Resize":256,
