--- a/configs/default_ViT_config.json
+++ b/configs/default_ViT_config.json
@@ -1,11 +1,15 @@
 {
+    "experiment":"test",
+    "run":"test",
+    
     "hyperparameters":{
         "num_workers":4,
+        "learning_rate":1e-5,
         "batch_size":32,
         "momentum":0.9,
         "weight_decay":5e-4,
-        "seed":42,
-        "cross_validation":5
+        "epochs":20,
+        "seed":42
     },
     "models":{
         "model_name":"vit_base_r50_s16_224.orig_in21k",
@@ -13,7 +17,7 @@
         "load_model":false,
         "model_version":null,
         "save_model":false,
-        "save_name":null,
+        "save_name":"default_model",
         "num_classes":0,
         "out_dim":5,
         "pretrained":true,
@@ -41,5 +45,6 @@
                 "Normalize":true
             }
         }
-    ]
+    ],
+    "output_columns": ["Marbling", "Color", "Texture", "Surface_Moisture", "Total"]
 }
