--- a/configs/default_ViT_config.json
+++ b/configs/default_ViT_config.json
@@ -10,7 +10,9 @@
         "weight_decay":5e-4,
         "epochs":20,
         "seed":42,
-        "cross_validaton":0
+        "cross_validaton":0,
+        "factor":0.3,
+        "patience":2
     },
     "models":{
         "model_name":"vit_base_r50_s16_224.orig_in21k",
