--- a/configs/default_ViT_config.json
+++ b/configs/default_ViT_config.json
@@ -16,7 +16,7 @@
     },
     "models":{
         "model_name":"vit_base_r50_s16_224.orig_in21k",
-        "model_file":"default_vit_model",
+        "model_file":"default_model",
         "load_model":false,
         "model_version":null,
         "save_model":false,
